--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # TLC LLM Playground - Python Dependencies
-# Python Version: 3.9+ recommended (tested on 3.11+)
+# Python Version: 3.9+ required (currently using 3.13.9)
 # Install with: pip install -r requirements.txt
 
 # Frontend - Streamlit web interface
